--- a/website/index.html
+++ b/website/index.html
@@ -33,7 +33,8 @@
     
     <!-- Attention-Guided Navigation CSS -->
     <link rel="stylesheet" href="/css/attention-guided-nav.css">
-    
+    <link href="/dist/output.css" rel="stylesheet">
+
     <!-- Custom Styles -->
     <style type="text/tailwindcss">
         /* CSS Variables */
